tests/negative/scope/import-package-twice/compiler.out
ERROR:
The package `core` was already imported at test.smol:2:1
	 1 | package testing;
	 2 | import core;
	   | ^^^^^^^^^^^^
	 3 | import core;

However, you try to import it again at test.smol:3:1
	 2 | import core;
	 3 | import core;
	   | ^^^^^^^^^^^^
	 4 | 

